--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,50 +6,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - NombreProyecto</title>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 
 <body>
     <header>
     <!-- Comienzo navegador header -->
-    <nav class="navbar bg-body-tertiary fixed-top">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Offcanvas navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body">
-        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-      </div>
-    </div>
-  </div>
-</nav>
 
+<nav class="navbar bg-body-tertiary fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Offcanvas navbar</a>
+        <a href="">Actividades</a>
+        <a href="">Chats</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="offcanvas"  
+          data-bs-target="#offcanvasNavbar"
+          aria-controls="offcanvasNavbar"
+          aria-label="Toggle navigation"
+        >
+        
+          <span class="navbar-toggler-icon"></span>
+        </button>
+     
+        <div
+          class="offcanvas offcanvas-end"
+          tabindex="-1"
+          id="offcanvasNavbar"
+          aria-labelledby="offcanvasNavbarLabel"
+        >
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
+            ></button>
+          </div>
+
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Favoritos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Mis Pertenecientes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Ayuda</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Mi Perfil</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Cerrar Sesion </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
 <!-- Fin navegador header -->
 
     </header>
@@ -59,12 +80,46 @@
     </main>
 
     <footer>
-        &copy; @DateTime.Now.Year - NombreProyecto
+       <Section>
+       <img class="logo" src="LOGO.png" alt="Logo">
+
+        <div class="footerDiv">
+            <h2 >Tandem</h2>
+            <p >Avanzamos Juntos</p>
+          </div>
+   
+       <div class="footerDiv">
+          <div >
+            <a href="IMG" ><img src="Instagram N.png" alt=""></a>
+            <a href="https://www.tiktok.com/es/" ><img src="TicTok N.png" alt=""></a>
+            <a href="https://x.com/?lang=es" ><img src="X n.png" alt=""></a>
+            <a href="https://www.facebook.com/?locale=es_LA"><img src="Facebook N.png" alt=""></a>
+          </div>
+      </div>
+  
+    <div class="footerDiv">
+          <h3 >Contacto</h3>
+          <p >✉️ Hablanos@Tandem.com</p>
+          <p >☎️ +54 11 4567 8932 </p>
+          <p >📍 AV. Libertador 2450 </p>
+       </div>
+  
+   
+    <div class="footerDerechos">
+     
+      <p >© 2025 Tandem. Todos los derechos reservados.</p>
+    </div>
+  </Section>
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
