--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 
 <nav class="navbar bg-body-tertiary fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Offcanvas navbar</a>
+        <a class="navbar-brand" href="Localhost:5088">Offcanvas navbar</a>
         <a href="">Actividades</a>
         <a href="">Chats</a>
         <button
@@ -78,10 +78,10 @@
     <main role="main">
         @RenderBody()
     </main>
-
+  
     <footer>
        <Section>
-       <img class="logo" src="LOGO.png" alt="Logo">
+       <img class="logo" src="wwwroot\Imagenes\LOGO 2.png" alt="Logo">
 
         <div class="footerDiv">
             <h2 >Tandem</h2>
@@ -90,10 +90,9 @@
    
        <div class="footerDiv">
           <div >
-            <a href="IMG" ><img src="Instagram N.png" alt=""></a>
-            <a href="https://www.tiktok.com/es/" ><img src="TicTok N.png" alt=""></a>
-            <a href="https://x.com/?lang=es" ><img src="X n.png" alt=""></a>
-            <a href="https://www.facebook.com/?locale=es_LA"><img src="Facebook N.png" alt=""></a>
+            <a href="https://www.instagram.com/tobi_turquie/" ><img src="wwwroot\Imagenes\IMG_3056.jpg" alt="IG"></a>
+            <a href="https://www.tiktok.com/es/" ><img src="wwwroot\Imagenes\IMG_3055.PNG" alt="TikTOk"></a>
+            <a href="https://www.facebook.com/?locale=es_LA"><img src="wwwroot\Imagenes\IMG_3057.jpg" alt="Facebook"></a>
           </div>
       </div>
   
