--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,9 +15,12 @@
 
 <nav class="navbar bg-body-tertiary fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="Localhost:5088">Offcanvas navbar</a>
-        <a href="">Actividades</a>
-        <a href="">Chats</a>
+        <a class="navbar-brand" href="Localhost:5088">Tándem</a>
+     
+        <a class="LinksNuestros" href="~/Actividades.cshtml">Actividades</a>
+        <a class = "LinksNuestros" href="Actividades.cshtml">Nosotros</a>
+        <img src="/Imagenes/CampanitaNotifi.webp" alt="CampanitaDeNoti">
+        <img src="" alt="">
         <button
           class="navbar-toggler"
           type="button"
@@ -37,7 +40,7 @@
           aria-labelledby="offcanvasNavbarLabel"
         >
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
             <button
               type="button"
               class="btn-close"
