--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -8,13 +8,13 @@
         <form method="post" action='@Url.Action("LogIn2", "Account")'>
             <p>
                 <div class="mb-3">
-        <input type="text" class="form-control" id="formGroupExampleInput" name="UserName"  placeholder="Nombre de usuario">
+        <input type="text" class="form-control" id="formGroupExampleInput" name="userName"  placeholder="Nombre de usuario">
         </div>
         <div class="mb-3">
-        <input type="text" class="form-control" id="formGroupExampleInput" name="Contraseña" placeholder="Email">
+        <input type="text" class="form-control" id="formGroupExampleInput" name="email" placeholder="Email">
         </div>
          <div class="mb-3">
-        <input type="text" class="form-control" id="formGroupExampleInput" name="Contraseña" placeholder="Contraseña">
+        <input type="text" class="form-control" id="formGroupExampleInput" name="contraseña" placeholder="Contraseña">
         </div>
         <div class="col-12">
             <button type="submit" class="btn btn-primary">Sign in</button>
