--- a/Views/Account/Registrarse.cshtml
+++ b/Views/Account/Registrarse.cshtml
@@ -11,38 +11,56 @@
                 <li>Nombre de usuario: 
                     <input type="text" name="userName" class="form-control" id="formGroupExampleInput" placeholder = "Nombre de usuadio">
                 </li>
+
+
+
     </div> 
     <div class="mb-3">
     <img src="" alt="img contraseña">
                 <li>Contraseña: 
-                    <input type="password" name="contraseña" class="form-control" id="formGroupExampleInput">
+                    <input type="password" name="contraseña" class="form-control" id="formGroupExampleInput" placeholder = "Contraseña">
                 </li>
     </div>
+
+
+
+
     <div class="mb-3">
     <img src="" alt="img misma foto antes">
                 <li>Repetir Contraseña: 
-                    <input type="password" name="contraseña1" class="form-control" id="formGroupExampleInput">
+                    <input type="password" name="contraseña1" class="form-control" id="formGroupExampleInput" placeholder = "Contraseña">
                 </li>
     </div>
+
+
+
     <div class="mb-3">
     <img src="" alt="img email">
                 <li>Email: 
-                    <input type="text" name="email" class="form-control" id="formGroupExampleInput">
+                    <input type="text" name="email" class="form-control" id="formGroupExampleInput" placeholder = "Email">
                 </li>
     </div>
    
+
+
    <div class = "InputRadio">
                  <li> 
                    <input type="radio" id="responsable" name="tipoUser" value="responsable" checked>
-<label for="responsable">Responsable</label>
+    <label for="responsable">Responsable</label>
 
-<input type="radio" id="perteneciente" name="tipoUser" value="perteneciente"> 
-<label for="perteneciente">Perteneciente</label>
+    <input type="radio" id="perteneciente" name="tipoUser" value="perteneciente"> 
+    <label for="perteneciente">Perteneciente</label>
                  </li>
    </div>
+
+
+
             <div class="col-12">
                 <button type="submit" class="btn btn-primary">Sign in</button>
             </div>
+
+
+
 
         </form>
 
