--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -91,4 +91,5 @@
 <section class="cta">
     <h3>Cada paso cuenta, no estás solo.</h3>
     <button class="btn-solid">Registrate y avancemos juntos</button>
+     <a href='@Url.Action("LogIn1", "Account")'>Registrarte</a>
 </section>
