--- a/Views/Home/Perfil.cshtml
+++ b/Views/Home/Perfil.cshtml
@@ -31,6 +31,6 @@
         <h3>Pertenecientes vinculados</h3>
         //VER COMO ESTAN VINCULADOS Y MOSTRAR
 
-        //VER INFORMACIÓN, POSIBILIDAD DE AGREGAR Y ELIMINAR PERTENECIENTES
+        //VER INFORMACION, POSIBILIDAD DE AGREGAR Y ELIMINAR PERTENECIENTES
     }
 </section>
