--- a/Views/Account/Registrarse.cshtml
+++ b/Views/Account/Registrarse.cshtml
@@ -9,7 +9,7 @@
             <div class="mb-3">
             <img src="" alt="img usuario">
                 <li>Nombre de usuario: 
-                    <input type="text" name="userName" class="form-control" id="formGroupExampleInput" placeholder = "Nombre de usuadio">
+                    <input type="text" name="userName" class="form-control" id="formGroupExampleInput" placeholder = "Nombre de usuario">
                 </li>
 
 
@@ -45,7 +45,7 @@
 
    <div class = "InputRadio">
                  <li> 
-                   <input type="radio" id="responsable" name="tipoUser" value="responsable" checked>
+                   <input type="radio" id="tutor" name="tipoUser" value="responsable" checked>
     <label for="responsable">Responsable</label>
 
     <input type="radio" id="perteneciente" name="tipoUser" value="perteneciente"> 
