--- a/Views/Home/Perfil.cshtml
+++ b/Views/Home/Perfil.cshtml
@@ -1,6 +1,8 @@
 @{
     ViewData["Title"] = "Perfil";
-    //FALTA CREAR LOS VIEWBAGS EN EL CONTROLER
+    //FALTA CREAR LOS VIEWBAGS EN EL CONTROLER 
+
+    //FALTA INDICAR ACTIONS EN AMBOS FORMS!!!!!!!!!!!!!!!!!
 }
 
 <section class="Perfil_Basicos">
@@ -21,16 +23,60 @@
 <hr />
 
 <section class="Perfil_Relaciones">
-    @if (ViewBag.usuario.tipoUsuario == "Perteneciente")
+    @if (ViewBag.usuario.tipousuario == "perteneciente")
     {
         <h3>Tutores vinculados</h3>
-        //VER COMO ESTAN VINCULADOS Y MOSTRAR
+
+        @foreach (var tutor in BD.ListaVinculos(ViewBag.usuario))
+        {
+            <div class="vinculo">
+                <p><strong>Nombre:</strong> @tutor.nombre @tutor.apellido</p>
+                <p><strong>Email:</strong> @tutor.mail</p>
+                <p><strong>Teléfono:</strong> @tutor.telefono</p>
+            </div>
+        }
     }
-    else if (Model.tipoUsuario == "Tutor")
+    else if (ViewBag.usuario.tipousuario == "tutor")
     {
         <h3>Pertenecientes vinculados</h3>
-        //VER COMO ESTAN VINCULADOS Y MOSTRAR
 
-        //VER INFORMACION, POSIBILIDAD DE AGREGAR Y ELIMINAR PERTENECIENTES
+        @foreach (var perteneciente in Model.ListaVinculos())
+        {
+            <div class="vinculo">
+                <p><strong>Nombre:</strong> @perteneciente.nombre @perteneciente.apellido</p>
+                <p><strong>Email:</strong> @perteneciente.mail</p>
+                <p><strong>Teléfono:</strong> @perteneciente.telefono</p>
+                
+                
+                <form method="post" action="" style="display:inline;">
+                    <input type="hidden" name="idTutor" value="@ViewBag.usuario.id" />
+                    <input type="hidden" name="idPerteneciente" value="@perteneciente.id" />
+                    <button type="submit" class="btn btn-danger btn-sm">Eliminar vínculo</button>
+                </form>
+            </div>
+        
+        }
+        <hr />
+        <h4>Agregar nuevo perteneciente</h4>
+        <form method="post" action="">
+            <div>
+                <label for="idPerteneciente">Seleccionar usuario perteneciente:</label>
+                <select name="idPerteneciente" required>
+                    @foreach (var usuario in BD.ListaUsuariosDisponibles()) //CREAR ESTA FUNCION
+                    {
+                        <option value="@usuario.id">@usuario.nombre @usuario.apellido</option>
+                    }
+                </select>
+            </div>
+
+            <div>
+                <label for="parentesco">Parentesco:</label>
+                <input type="text" name="parentesco" required />
+            </div>
+
+            <input type="hidden" name="idTutor" value="@ViewBag.usuario.id" />
+            <button type="submit" class="btn btn-primary mt-2">Agregar vínculo</button>
+        </form>
     }
+    
 </section>
