--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -53,24 +53,24 @@
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
              
-                 <a href='@Url.Action("LogIn1", "Account")' class="nav-link active" aria-current="page">Home</a>
+                 <a href='@Url.Action("Home", "Home")' class="nav-link active" aria-current="page">Home</a>
               </li>
               <li class="nav-item">
                
-                 <a href='@Url.Action("LogIn1", "Account")' class="nav-link" >Favoritos</a>
+                 <a href='@Url.Action("LogIn1", "Home")' class="nav-link" >Favoritos</a>
 
               </li>
               <li class="nav-item">
-              <a href='@Url.Action("LogIn1", "Account")' class="nav-link" >Mis pertenecientes</a>
+              <a href='@Url.Action("LogIn1", "Home")' class="nav-link" >Mis pertenecientes</a>
 
 
               </li>
               <li class="nav-item">
-              <a href='@Url.Action("LogIn1", "Account")' class="nav-link" >Ayuda</a>
+              <a href='@Url.Action("LogIn1", "Home")' class="nav-link" >Ayuda</a>
 
               </li>
               <li class="nav-item">
-              <a href='@Url.Action("LogIn1", "Account")' class="nav-link" >Mi perfil</a>
+              <a href='@Url.Action("Perfil", "Home")' class="nav-link" >Mi perfil</a>
 
               </li>
               <li class="nav-item">
