--- a/Views/Home/Perfil.cshtml
+++ b/Views/Home/Perfil.cshtml
@@ -38,6 +38,8 @@
             </div>
             
         }
+        <a href='@Url.Action("Configuracion", "Home")' class="nav-link" >Editar perfil </a>
+
     </div>
 
 
