--- a/Views/Home/JuegoOrdenarPictogramas.cshtml
+++ b/Views/Home/JuegoOrdenarPictogramas.cshtml
@@ -1,4 +1,48 @@
+@model PreguntaPictograma
 @{
     ViewData["Title"] = "JuegoOrdenarPictogramas";
+}
+
+<div id="juego-pictograma-container" 
+     class="juego-container"
+     data-url-verificar="@Url.Action("VerificarRespuesta")" 
+     data-url-siguiente="@Url.Action("SiguientePregunta")"
+     data-url-juegos="@Url.Action("Juegos")">
+
+    <h2>¿QUÉ ES?</h2>
+
+    <div class="pictograma-imagen-container">
+        <img id="imgPictograma" src="@Model.ImagenPictograma" alt="Pictograma" class="img-pictograma">
+    </div>
+
+    <input type="hidden" id="hdnIdPregunta" value="@Model.IdPregunta" />
+
+    <br>
+
+    <div id="opciones-container">
+        <button class="opcion btn" data-opcion="1">@Model.Opcion1</button>
+        <button class="opcion btn" data-opcion="2">@Model.Opcion2</button>
+        <br>
+        <button class="opcion btn" data-opcion="3">@Model.Opcion3</button>
+        <button class="opcion btn" data-opcion="4">@Model.Opcion4</button>
+    </div>
+
+    <br>
+
+    <div id="feedback" style="display: none;">
+        </div>
+
+    <br>
+
+    <div class="accion-container">
+        <button id="btnVerificar" class="btn">VERIFICAR</button>
+        <button id="btnSiguiente" class="btn" style="display: none;">SIGUIENTE</button>
+    </div>
+
+</div>
+
+
+@section Scripts {
+    <script src="~/js/juegoPictogramas.js"></script>
 }
 
